--- a/demo.html
+++ b/demo.html
@@ -4,7 +4,7 @@
     <title>导航栏</title>
     <meta encoding="utf-8">
     <link rel="stylesheet" href="css/nav.css">
-    <script src="drop.min.js"></script>
+    <script src="drop.js"></script>
     <script>
         window.onload=function () {
             var drop=new Drop();
@@ -22,18 +22,60 @@
                                 {
                                     "title": "最新资讯",
                                     "url": "http://www.baidu.com"
+                                },
+                                {
+                                    "title": "最新资讯2",
+                                    "url": "http://www.baidu.com"
+                                },
+                                {
+                                    "title": "最新资讯3",
+                                    "url": "http://www.baidu.com"
+                                },
+                                {
+                                    "title": "最新资讯4",
+                                    "url": "http://www.baidu.com"
+                                },
+                                {
+                                    "title": "最新资讯5",
+                                    "url": "http://www.baidu.com"
+                                },
+                                {
+                                    "title": "最新资讯6",
+                                    "url": "http://www.baidu.com"
+                                },
+                                {
+                                    "title": "最新资讯7",
+                                    "url": "http://www.baidu.com"
                                 }
                             ]
                         },
                         {
                             "title": "社区公告",
-                            "url": "http://www.baidu.com"
-
+                            "url": "http://www.baidu.com",
+                            "child": [
+                                {
+                                    "title": "最新新闻",
+                                    "url": "http://www.baidu.com"
+                                },
+                                {
+                                    "title": "最新资讯",
+                                    "url": "http://www.baidu.com"
+                                }
+                            ]
                         },
                         {
                             "title": "办事指南",
-                            "url": "http://www.baidu.com"
-
+                            "url": "http://www.baidu.com",
+                            "child": [
+                                {
+                                    "title": "最新新闻",
+                                    "url": "http://www.baidu.com"
+                                },
+                                {
+                                    "title": "最新资讯",
+                                    "url": "http://www.baidu.com"
+                                }
+                            ]
                         }
                     ]
             };
